--- a/ds_playbook.ipynb
+++ b/ds_playbook.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Science Playook"
+    "# Data Science Playook\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img width=\"180\" src=\"https://user-images.githubusercontent.com/19881320/54484151-b85c4780-4836-11e9-923f-c5e0e5afe866.jpg\">\n",
+    "</p>"
    ]
   },
   {
@@ -59,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -182,6 +186,31 @@
        "      <td>spades</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seven</th>\n",
+       "      <td>spades</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>six</th>\n",
+       "      <td>spades</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>five</th>\n",
+       "      <td>spades</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>four</th>\n",
+       "      <td>spades</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>spades</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -193,21 +222,26 @@
        "jack   spades     11\n",
        "ten    spades     10\n",
        "nine   spades      9\n",
-       "eight  spades      8"
+       "eight  spades      8\n",
+       "seven  spades      7\n",
+       "six    spades      6\n",
+       "five   spades      5\n",
+       "four   spades      4\n",
+       "three  spades      3"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -367,22 +401,275 @@
        "10/10/1960 20:00   1/22/2004  21.4180556 -157.803611          NaN  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ufo_df = pd.read_csv(\"app_data/ufo_sightings_complete.csv\", sep=\",\", header=0, index_col=0)\n",
-    "ufo_df.head()"
+    "ufo_df = pd.read_csv(\"app_data/ufo_sightings_complete.csv\", sep=\",\", header=0, index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>country</th>\n",
+       "      <th>shape</th>\n",
+       "      <th>duration (seconds)</th>\n",
+       "      <th>duration (hours/min)</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>date posted</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>Unnamed: 11</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10/10/1949 20:30</th>\n",
+       "      <td>san marcos</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>us</td>\n",
+       "      <td>cylinder</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>45 minutes</td>\n",
+       "      <td>This event took place in early fall around 194...</td>\n",
+       "      <td>4/27/2004</td>\n",
+       "      <td>29.8830556</td>\n",
+       "      <td>-97.941111</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10/10/1949 21:00</th>\n",
+       "      <td>lackland afb</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>light</td>\n",
+       "      <td>7200</td>\n",
+       "      <td>1-2 hrs</td>\n",
+       "      <td>1949 Lackland AFB&amp;#44 TX.  Lights racing acros...</td>\n",
+       "      <td>12/16/2005</td>\n",
+       "      <td>29.38421</td>\n",
+       "      <td>-98.581082</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10/10/1955 17:00</th>\n",
+       "      <td>chester (uk/england)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>gb</td>\n",
+       "      <td>circle</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20 seconds</td>\n",
+       "      <td>Green/Orange circular disc over Chester&amp;#44 En...</td>\n",
+       "      <td>1/21/2008</td>\n",
+       "      <td>53.2</td>\n",
+       "      <td>-2.916667</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10/10/1956 21:00</th>\n",
+       "      <td>edna</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>us</td>\n",
+       "      <td>circle</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1/2 hour</td>\n",
+       "      <td>My older brother and twin sister were leaving ...</td>\n",
+       "      <td>1/17/2004</td>\n",
+       "      <td>28.9783333</td>\n",
+       "      <td>-96.645833</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10/10/1960 20:00</th>\n",
+       "      <td>kaneohe</td>\n",
+       "      <td>hi</td>\n",
+       "      <td>us</td>\n",
+       "      <td>light</td>\n",
+       "      <td>900</td>\n",
+       "      <td>15 minutes</td>\n",
+       "      <td>AS a Marine 1st Lt. flying an FJ4B fighter/att...</td>\n",
+       "      <td>1/22/2004</td>\n",
+       "      <td>21.4180556</td>\n",
+       "      <td>-157.803611</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10/10/1961 19:00</th>\n",
+       "      <td>bristol</td>\n",
+       "      <td>tn</td>\n",
+       "      <td>us</td>\n",
+       "      <td>sphere</td>\n",
+       "      <td>300</td>\n",
+       "      <td>5 minutes</td>\n",
+       "      <td>My father is now 89 my brother 52 the girl wit...</td>\n",
+       "      <td>4/27/2007</td>\n",
+       "      <td>36.595</td>\n",
+       "      <td>-82.188889</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10/10/1965 21:00</th>\n",
+       "      <td>penarth (uk/wales)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>gb</td>\n",
+       "      <td>circle</td>\n",
+       "      <td>180</td>\n",
+       "      <td>about 3 mins</td>\n",
+       "      <td>penarth uk  circle  3mins  stayed 30ft above m...</td>\n",
+       "      <td>2/14/2006</td>\n",
+       "      <td>51.434722</td>\n",
+       "      <td>-3.180000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10/10/1965 23:45</th>\n",
+       "      <td>norwalk</td>\n",
+       "      <td>ct</td>\n",
+       "      <td>us</td>\n",
+       "      <td>disk</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>20 minutes</td>\n",
+       "      <td>A bright orange color changing to reddish colo...</td>\n",
+       "      <td>10/2/1999</td>\n",
+       "      <td>41.1175</td>\n",
+       "      <td>-73.408333</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10/10/1966 20:00</th>\n",
+       "      <td>pell city</td>\n",
+       "      <td>al</td>\n",
+       "      <td>us</td>\n",
+       "      <td>disk</td>\n",
+       "      <td>180</td>\n",
+       "      <td>3  minutes</td>\n",
+       "      <td>Strobe Lighted disk shape object observed clos...</td>\n",
+       "      <td>3/19/2009</td>\n",
+       "      <td>33.5861111</td>\n",
+       "      <td>-86.286111</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10/10/1966 21:00</th>\n",
+       "      <td>live oak</td>\n",
+       "      <td>fl</td>\n",
+       "      <td>us</td>\n",
+       "      <td>disk</td>\n",
+       "      <td>120</td>\n",
+       "      <td>several minutes</td>\n",
+       "      <td>Saucer zaps energy from powerline as my pregna...</td>\n",
+       "      <td>5/11/2005</td>\n",
+       "      <td>30.2947222</td>\n",
+       "      <td>-82.984167</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  city state country     shape  \\\n",
+       "datetime                                                         \n",
+       "10/10/1949 20:30            san marcos    tx      us  cylinder   \n",
+       "10/10/1949 21:00          lackland afb    tx     NaN     light   \n",
+       "10/10/1955 17:00  chester (uk/england)   NaN      gb    circle   \n",
+       "10/10/1956 21:00                  edna    tx      us    circle   \n",
+       "10/10/1960 20:00               kaneohe    hi      us     light   \n",
+       "10/10/1961 19:00               bristol    tn      us    sphere   \n",
+       "10/10/1965 21:00    penarth (uk/wales)   NaN      gb    circle   \n",
+       "10/10/1965 23:45               norwalk    ct      us      disk   \n",
+       "10/10/1966 20:00             pell city    al      us      disk   \n",
+       "10/10/1966 21:00              live oak    fl      us      disk   \n",
+       "\n",
+       "                 duration (seconds) duration (hours/min)  \\\n",
+       "datetime                                                   \n",
+       "10/10/1949 20:30               2700           45 minutes   \n",
+       "10/10/1949 21:00               7200              1-2 hrs   \n",
+       "10/10/1955 17:00                 20           20 seconds   \n",
+       "10/10/1956 21:00                 20             1/2 hour   \n",
+       "10/10/1960 20:00                900           15 minutes   \n",
+       "10/10/1961 19:00                300            5 minutes   \n",
+       "10/10/1965 21:00                180         about 3 mins   \n",
+       "10/10/1965 23:45               1200           20 minutes   \n",
+       "10/10/1966 20:00                180           3  minutes   \n",
+       "10/10/1966 21:00                120      several minutes   \n",
+       "\n",
+       "                                                           comments  \\\n",
+       "datetime                                                              \n",
+       "10/10/1949 20:30  This event took place in early fall around 194...   \n",
+       "10/10/1949 21:00  1949 Lackland AFB&#44 TX.  Lights racing acros...   \n",
+       "10/10/1955 17:00  Green/Orange circular disc over Chester&#44 En...   \n",
+       "10/10/1956 21:00  My older brother and twin sister were leaving ...   \n",
+       "10/10/1960 20:00  AS a Marine 1st Lt. flying an FJ4B fighter/att...   \n",
+       "10/10/1961 19:00  My father is now 89 my brother 52 the girl wit...   \n",
+       "10/10/1965 21:00  penarth uk  circle  3mins  stayed 30ft above m...   \n",
+       "10/10/1965 23:45  A bright orange color changing to reddish colo...   \n",
+       "10/10/1966 20:00  Strobe Lighted disk shape object observed clos...   \n",
+       "10/10/1966 21:00  Saucer zaps energy from powerline as my pregna...   \n",
+       "\n",
+       "                 date posted    latitude   longitude  Unnamed: 11  \n",
+       "datetime                                                           \n",
+       "10/10/1949 20:30   4/27/2004  29.8830556  -97.941111          NaN  \n",
+       "10/10/1949 21:00  12/16/2005    29.38421  -98.581082          NaN  \n",
+       "10/10/1955 17:00   1/21/2008        53.2   -2.916667          NaN  \n",
+       "10/10/1956 21:00   1/17/2004  28.9783333  -96.645833          NaN  \n",
+       "10/10/1960 20:00   1/22/2004  21.4180556 -157.803611          NaN  \n",
+       "10/10/1961 19:00   4/27/2007      36.595  -82.188889          NaN  \n",
+       "10/10/1965 21:00   2/14/2006   51.434722   -3.180000          NaN  \n",
+       "10/10/1965 23:45   10/2/1999     41.1175  -73.408333          NaN  \n",
+       "10/10/1966 20:00   3/19/2009  33.5861111  -86.286111          NaN  \n",
+       "10/10/1966 21:00   5/11/2005  30.2947222  -82.984167          NaN  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ufo_df.head(10)"
+   ]
   },
   {
    "cell_type": "markdown",
