--- a/Matplotlib.ipynb
+++ b/Matplotlib.ipynb
@@ -413,11 +413,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Data + Science, not Data Science yet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A wave in an oscillatory motion that propagates through space with some velocity, v.  A simple way to create a wave on a stretched string is to displace one end vertically up and down.  This displacement of the end of the string is transferred to the neighboring fibers in the string, thus creating a traveling wave.  Such a wave is transverse because the up and down mostion of the bibers is perpendicular or transverseto the direction of teh wave as it travels down the length of the string.  When the oscillatory motino of the wave is parallel to the direction of propagation the wave is longitudinal.  Sound is a longitudinal wave.\n",
+    "\n",
+    "## Experiment\n",
+    "A suspended string was weighed and measured in length before being attached to an oscillator device.  The string was measured for level height at both ends of suspension so the effects of gravity was non-existent in the creation of antinodes.  "
+   ]
   }
  ],
  "metadata": {
