--- a/ds_playbook.ipynb
+++ b/ds_playbook.ipynb
@@ -794,9 +794,9 @@
    "source": [
     "# Albums\n",
     "albums = {\"band\": [\"Black Sabbath\", \"Motorhead\", \"Black Sabbath\", \"Led Zeppelin\", \"Queen\", \"Pantera\", \"Led Zeppelin\", \"Slayer\", \"Black Label Society\", \"The Guinea Worm\", \"None\", \"Queen\", \"Rush\", \"Iron Maiden\", \"Iron Maiden\", \"White Zombie\", \"Metallica\", \"Tool\", \"Megadeth\", \"Foo Fighters\"], \n",
-    "          \"albums\": [\"Paranoid\", \"Ace of Spades\", \"Paranoid\", \"II\", \"A Day at the Races\", \"Far Beyond Driven\", \"II\", \"Reign In Blood\", \"BLS 20th Anniversary\", \"Decompose\", \"None\", \"Jazz\", \"20112\", \"The Number of the Beast\", \"Powerslave\", \"La Sexorcisto\", \"Master of Puppets\", \"Lateralus\", \"Rust in Peace\", \"Foo Fighters\"], \n",
+    "          \"albums\": [\"Paranoid\", \"Ace of Spades\", \"Paranoid\", \"II\", \"A Day at the Races\", \"Far Beyond Driven\", \"III\", \"Reign In Blood\", \"BLS 20th Anniversary\", \"Decompose\", \"None\", \"Jazz\", \"20112\", \"The Number of the Beast\", \"Powerslave\", \"La Sexorcisto\", \"Master of Puppets\", \"Lateralus\", \"Rust in Peace\", \"Foo Fighters\"], \n",
     "          \"memberCount\" : [4, 3, 4, 4, 4, 4, 4, 4, 5, 2, None, 4, 3, 5, 5, 4, 4, 4, 5, 6], \n",
-    "          \"albumYear\" : [1970, 1970, 1970, 1970, 1970, 1992, 1970, 1986, 1995, 2007, 0, 1976, 1989, 1982, 1983, 1994, 1986, 2000, 1988, 1996]}"
+    "          \"albumYear\" : [1970, 1970, 1970, 1970, 1972, 1992, 1970, 1986, 1995, 2007, 0, 1976, 1989, 1982, 1983, 1994, 1986, 2000, 1988, 1996]}"
    ]
   },
   {
