DS Playbook updates 2021

--- a/Data Science with Jupyter.ipynb
+++ b/Data Science with Jupyter.ipynb
@@ -2,6 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>message_1</th>\n",
+       "        <th>message_2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Hello</td>\n",
+       "        <td>World from SQLITE</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Hello', 'World from SQLITE')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql sqlite://\n",
+    "\n",
+    "    # Execute SQL commands from the iPyton interface\n",
+    "SELECT * \n",
+    "FROM (\n",
+    "    SELECT 'Hello' as message_1) A JOIN ( SELECT 'World from SQLITE' as message_2) B;"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
